# bazel_wire_compiler_exmaple

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  maven_install.json
Protos/example/wire/echo/: Entity.proto
